se agregaron enlaces de redes sociales

--- a/index.html
+++ b/index.html
@@ -667,12 +667,12 @@ $(document).ready(function() {
       <div class="col-md-6">
         <ul class="list-inline text-right">
           <li class="list-inline-item">
-            <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+            <a href="https://www.facebook.com/kofita.Official/" target="_blank" title="Facebook">
               <i class="fab fa-facebook-f  text-white"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://twitter.com/" target="_blank" title="Twitter">
+            <a href="https://twitter.com/kofita_ve" target="_blank" title="Twitter">
               <i class="fab fa-twitter  text-white"></i>
             </a>
           </li>
