descripción de fotos

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
               </a>
             </div>
             <div class="col-md-4">
-              <a href="assets/images/f2.jpeg" title="Foto 2" data-description="Descripción de la foto 2" class="gallery-link">
+              <a href="assets/images/f2.jpeg" title="Camisa manga larga, 100% Lino" data-description="Descripción de la foto 2" class="gallery-link">
                 <img src="assets/images/f2.jpeg" alt="Foto 2">
               </a>
             </div>
             <div class="col-md-4">
-              <a href="assets/images/f3.jpeg" title="Foto 3" data-description="Descripción de la foto 3" class="gallery-link">
+              <a href="assets/images/f3.jpeg" title="Accesorios" data-description="Descripción de la foto 3" class="gallery-link">
                 <img src="assets/images/f3.jpeg" alt="Foto 3">
               </a>
             </div>
@@ -107,17 +107,17 @@
   
           <div class="row gallery">
             <div class="col-md-4 mt-5">
-              <a href="assets/images/f4.jpeg" title="Pulsera turquesa, coral y baño de oro" data-description="" class="gallery-link">
+              <a href="assets/images/f4.jpeg" title="Aros" data-description="" class="gallery-link">
                 <img src="assets/images/f4.jpeg" alt="Foto 1">
               </a>
             </div>
             <div class="col-md-4 mt-5">
-              <a href="assets/images/f5.jpeg" title="Foto 2" data-description="Descripción de la foto 2" class="gallery-link">
+              <a href="assets/images/f5.jpeg" title="Camisa Dorotea, 100% LINO" data-description="Descripción de la foto 2" class="gallery-link">
                 <img src="assets/images/f5.jpeg" alt="Foto 2">
               </a>
             </div>
             <div class="col-md-4 mt-5">
-              <a href="assets/images/f6.jpeg" title="Foto 3" data-description="Descripción de la foto 3" class="gallery-link">
+              <a href="assets/images/f6.jpeg" title="Cuidamos cada detalle, trabajamos lino importado y hacemos camisas a medida" data-description="Descripción de la foto 3" class="gallery-link">
                 <img src="assets/images/f6.jpeg" alt="Foto 3">
               </a>
             </div>
